--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,10 @@
   <div id="breadcrumbs" class="full-width" style="height:10%;">
     Adobe Marketing Cloud / Home
   </div>
-  <div id="app-container" class="full-width" style="height:90%;">
-    <left-hand-pane></left-hand-pane>
-    <div id="app-rhp" class="full-height float-left" style="width: 69%;">
-      <content-header></content-header>
+  <div id="app-container" class="full-width" style="height:90%;" ng-init="hideLhp = false">
+    <left-hand-pane ng-show="!hideLhp" hide-lhp="hideLhp" ></left-hand-pane>
+    <div ng-class="{'full-width': hideLhp}" id="app-rhp" class="full-height float-left">
+      <content-header hide-lhp="hideLhp"></content-header>
       <div id="app-view-container" class="full-width gray-border" style="height:80%;" ui-view></div>
       <div id="app-view-footer" class="full-width gray-border" style="height:10%;">
         <h3>This is the view footer</h3>
