--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Healthy Gulp Angular</title>
+    <title>Weather App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- bower:css -->
@@ -11,7 +11,7 @@
     <!-- inject:css -->
     <!-- endinject -->
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Weather App</title>
 </head>
 <body ng-app="weatherApp">
 <div ui-view></div>
